Credits properly added now

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <br/>
 
   <h3>Password field with toggle</h3>
-  <p>Extend the functionality of your <code>&lt;input type="password"&gt;</code> fields by adding a button that toggles password display on or off. Simply add the <code>.pwd</code> class to your field and the <code>.pwd-toggle</code> class to a <code>&lt;span&gt;&lt;span/&gt;</code> element in the same <code>.input-group</code> and users can now toggle password viewing on or off. When the form is submitted, the field will revent to <code>type="password"</code> regardless of its current state. Just be sure to use an <code>&lt;input type="submit"&gt;</code> element to submit your form. <strong>Original idea and implementation<strong> by <a href="https://codepen.io/shellbryson/post/toggle-passwords">Shell Bryson</a>.</p>
+  <p>Extend the functionality of your <code>&lt;input type="password"&gt;</code> fields by adding a button that toggles password display on or off. Simply add the <code>.pwd</code> class to your field and the <code>.pwd-toggle</code> class to a <code>&lt;span&gt;&lt;span/&gt;</code> element in the same <code>.input-group</code> and users can now toggle password viewing on or off. When the form is submitted, the field will revent to <code>type="password"</code> regardless of its current state. Just be sure to use an <code>&lt;input type="submit"&gt;</code> element to submit your form.</p>
   <div class="panel panel-default">
    <div class="panel-heading">
     <h4 class="panel-title">Example</h4>
@@ -44,6 +44,7 @@
   &lt;input type="password" class="form-control pwd"/&gt;
   &lt;span class="text" class="form-control"&gt;&lt;/span&gt;
 &lt;/div&gt;</code></pre></figure>
+<br/><p><strong>Original idea and implementation<strong> by <a href="https://codepen.io/shellbryson/post/toggle-passwords">Shell Bryson</a>.</p>
   </div>
   </div>
   
