--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <p>A few useful extensions for the very popular <a href="http://getbootstrap.com/">Bootstrap</a> framework.</p>
   </div>
 
-  <h2>Components</h2>
+  <h2>Components <small>Easy-to-use components for Bootstrap 3</small></h2>
   <p>The following is a list of available components as of now. This list will be updated as more components are developed and added to the framework.</p>
   <br/>
 
