Started styling checkboxes and radio buttons

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
  &lt;/div&gt;
 &lt;/div&gt;</code></pre></figure>
   </div>
+    <input id="custom-checkbox" class="chkbox" type="checkbox">
+    <label for="custom-checkbox" class="chkbox-label">Custom Checkbox's Label</label>
   </div>
  </body>
 </html>
