Checkboxes and style variables

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
    </div>
   </div>
   <br/>
-  <h3>Checkbox styles</h3>
+  <h3>Checkbox styles <small>In 6 pure CSS flavours</small></h3>
   <p>Use the <code>.chkbox</code> class only on an <code>&lt;input type="checkbox"&gt;</code> elements. There are six flavours, similar to the normal Bootstrap buttons:</p>
   <ul>
     <li><code>.chkbox-default</code></li>
@@ -106,7 +106,7 @@
     <li><code>.chkbox-danger</code></li>
   </ul>
 
-    <input id="custom-checkbox" class="chkbox" type="checkbox">
+    <input id="custom-checkbox" class="chkbox chkbox-default" type="checkbox">
     <label for="custom-checkbox" class="chkbox-label">Custom Checkbox's Label</label>
   
 </div>
