Custom checkboxes ready, mixins and styles, one extra button style

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <li><code>.chkbox-danger</code></li>
   </ul>
 
-    <input id="custom-checkbox" class="chkbox chkbox-default" type="checkbox">
+    <input id="custom-checkbox" class="chkbox chkbox-notice" type="checkbox">
     <label for="custom-checkbox" class="chkbox-label">Custom Checkbox's Label</label>
   
 </div>
