--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
    </div> 
   </div>
 
-  <input id="rd1" class="rdbtn" name="test" type="radio"> <label for="rd1" class="rdbtn-label">Default  </label>
-  <input id="rd2" class="rdbtn" name="test" type="radio"> <label for="rd2" class="rdbtn-label">Primary  </label>
-  
+  <input id="rd1" class="rdbtn" name="test" type="radio"> <label for="rd1">Default  </label>
+  <input id="rd2" class="rdbtn" name="test" type="radio"> <label for="rd2">Primary  </label>
+
 </div>
  </body>
 </html>
