Radio buttons complete

--- a/index.html
+++ b/index.html
@@ -145,8 +145,14 @@
    </div> 
   </div>
 
-  <input id="rd1" class="rdbtn" name="test" type="radio"> <label for="rd1">Default  </label>
-  <input id="rd2" class="rdbtn" name="test" type="radio"> <label for="rd2">Primary  </label>
+<!-- TODO: Write the proper divs and stuff for the radios-->
+  <input id="rd1" class="rdbtn rdbtn-default" name="test" type="radio"> <label for="rd1">Default  </label>
+  <input id="rd2" class="rdbtn rdbtn-primary" name="test" type="radio"> <label for="rd2">Primary  </label>
+  <input id="rd3" class="rdbtn rdbtn-success" name="test" type="radio"> <label for="rd3">Success  </label>
+  <input id="rd4" class="rdbtn rdbtn-info" name="test" type="radio"> <label for="rd4">Info  </label>
+  <input id="rd5" class="rdbtn rdbtn-warning" name="test" type="radio"> <label for="rd5">Danger  </label>
+  <input id="rd5" class="rdbtn rdbtn-danger" name="test" type="radio"> <label for="rd6">Warning  </label>
+  <input id="rd7" class="rdbtn rdbtn-notice" name="test" type="radio"> <label for="rd7">Notice  </label>
 
 </div>
  </body>
