Working on list styles

--- a/index.html
+++ b/index.html
@@ -394,6 +394,16 @@ Yes/No &lt;input id="o6" class="switch switch-rect-primary switch-yes-no" type="
    <p>&nbsp;&nbsp;&nbsp;<strong>Original idea and implementation</strong> by <a href="http://codepen.io/Thomas-Lebeau/pen/csHqx">Thomas Lebeau</a>.</p>
   </div>
 
+<h4>List element styles <small>Work in progress, check back later</small></h4>
+<ol class="ol-disc-success">
+  <li>I</li>
+  <li>am</li>
+  <li>a</li>
+  <li>list</li>
+  <li>element</li>
+</ol>
+
+
 <!-- Page ending, do not modify below this line -->
 </div>
  </body>
