Fixes an issue with mobile demo page not displaying properly (Issue #8)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <body  data-spy="scroll" data-target="#navbar-bse">
 <div class="container-fluid">
 <div class="row">
-<div class="col-md-2" id="navbar-bse">
+<div class="col-md-2 hidden-xs hidden-sm" id="navbar-bse">
 <!-- Page start, do not modify above this line-->
 <br/>
 <ul class="nav nav-pills nav-stacked" style="position:fixed;">
